Added voice recording function + voice control throughout the app; project cleanup